--- a/cloudmusicqt_harmattan.desktop
+++ b/cloudmusicqt_harmattan.desktop
@@ -3,8 +3,9 @@ Encoding=UTF-8
 Version=1.0
 Type=Application
 Terminal=false
-Name=网易云音乐
-Exec=/usr/bin/single-instance /opt/cloudmusicqt/bin/cloudmusicqt
+Name=cloudmusic
+Name[zh]=网易云音乐
+Exec=/usr/bin/invoker --type=d -s /opt/cloudmusicqt/bin/cloudmusicqt
 Icon=/usr/share/themes/base/meegotouch/cloudmusicqt/cloudmusicqt_meego.svg
 X-Window-Icon=
 X-HildonDesk-ShowInToolbar=true
